# mcp_project

./: README.md  mcp_client_paint.py  mcp_server_paint.py  pyproject.toml  screen_coord_finder.md
